feat: Add bonus points to user account
- Added endpoint `/add-bonus` to allow adding bonus points to a user's account.
- Improved the add and update address methods.